src/main/java/com/example/geoserver/error/ogc/CoverageStoreNotFoundException.java
package com.example.geoserver.error.ogc;public class CoverageStoreNotFoundException {
}
